Give context menu items with disabled class a disabled look. A few alignment fixes for notifications.

--- a/module/legacy/_context.scss
+++ b/module/legacy/_context.scss
@@ -104,6 +104,10 @@
     padding: var(--zehn-size-context-entry-padding) !important;
 }
 
+._1n7Wloe5jZ6fSuvV18NNWI.disabled {
+  color: var(--zehn-color-context-text-other) !important;
+}
+
 .QFW0BtI4l77AFmv1xLAkx,
 ._3B8wRA4H7e_oSksYNqpSPv,
 ._25gii5r23MmAqXvLZj24tK,
@@ -134,7 +138,7 @@
 /* DROPDOWN */
 ._2oAiZidGyUxL-hfupFDQ2m,
 /* MENU */
-._1n7Wloe5jZ6fSuvV18NNWI:not(.contextMenuUnselectable) {
+._1n7Wloe5jZ6fSuvV18NNWI:not(.contextMenuUnselectable, .disabled) {
   &::after {
     content: "";
     position: absolute;
@@ -164,8 +168,8 @@
 ._2KpxNwIOJq2xElKzUwTadQ ._1m5_CGXeD2EYKUBjfSk05m._1g6189hRsH8zibByQSuRYG,
 ._1n7Wloe5jZ6fSuvV18NNWI:has(.DNDCheckBox.Panel .DialogCheckbox.Active),
 ._2oAiZidGyUxL-hfupFDQ2m:has(._1TyV26CL6Wjd3gaJsh_rpr),
-._1n7Wloe5jZ6fSuvV18NNWI.menuChecked:not(.contextMenuUnselectable),
-._1n7Wloe5jZ6fSuvV18NNWI._18z-3vkWndCBO5WJgFldRK:not(.contextMenuUnselectable) {
+._1n7Wloe5jZ6fSuvV18NNWI.menuChecked:not(.contextMenuUnselectable, .disabled),
+._1n7Wloe5jZ6fSuvV18NNWI._18z-3vkWndCBO5WJgFldRK:not(.contextMenuUnselectable, .disabled) {
   &.zehnReveal:hover::before {
     background-color: transparent;
   }
@@ -180,8 +184,8 @@
   ._2KpxNwIOJq2xElKzUwTadQ ._1m5_CGXeD2EYKUBjfSk05m._1g6189hRsH8zibByQSuRYG::after,
   ._1n7Wloe5jZ6fSuvV18NNWI:has(.DNDCheckBox.Panel .DialogCheckbox.Active)::after,
   ._2oAiZidGyUxL-hfupFDQ2m:has(._1TyV26CL6Wjd3gaJsh_rpr)::after,
-  ._1n7Wloe5jZ6fSuvV18NNWI.menuChecked:not(.contextMenuUnselectable)::after,
-  ._1n7Wloe5jZ6fSuvV18NNWI._18z-3vkWndCBO5WJgFldRK:not(.contextMenuUnselectable)::after {
+  ._1n7Wloe5jZ6fSuvV18NNWI.menuChecked:not(.contextMenuUnselectable, .disabled)::after,
+  ._1n7Wloe5jZ6fSuvV18NNWI._18z-3vkWndCBO5WJgFldRK:not(.contextMenuUnselectable, .disabled)::after {
     filter: var(--zehn-filter-selected-light) !important;
   }
 }
@@ -190,8 +194,8 @@
   ._2KpxNwIOJq2xElKzUwTadQ ._1m5_CGXeD2EYKUBjfSk05m._1g6189hRsH8zibByQSuRYG::after,
   ._1n7Wloe5jZ6fSuvV18NNWI:has(.DNDCheckBox.Panel .DialogCheckbox.Active)::after,
   ._2oAiZidGyUxL-hfupFDQ2m:has(._1TyV26CL6Wjd3gaJsh_rpr)::after,
-  ._1n7Wloe5jZ6fSuvV18NNWI.menuChecked:not(.contextMenuUnselectable)::after,
-  ._1n7Wloe5jZ6fSuvV18NNWI._18z-3vkWndCBO5WJgFldRK:not(.contextMenuUnselectable)::after {
+  ._1n7Wloe5jZ6fSuvV18NNWI.menuChecked:not(.contextMenuUnselectable, .disabled)::after,
+  ._1n7Wloe5jZ6fSuvV18NNWI._18z-3vkWndCBO5WJgFldRK:not(.contextMenuUnselectable, .disabled)::after {
     filter: var(--zehn-filter-selected-dark) !important;
   }
 }
@@ -774,6 +778,7 @@
   background: transparent !important;
 }
 
+.contextMenuItem.disabled,
 .contextMenuUnselectable,
 .contextMenuUnselectable.disabled,
 .contextMenuGameTitle,
