--- a/module/window/overlay/_notification.scss
+++ b/module/window/overlay/_notification.scss
@@ -66,7 +66,7 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
 ._1lqXpJpRlYvyM2fBx6beHd {
   display: flex !important;
   flex-direction: column !important;
-  align-items: center !important;
+  align-items: left !important;
   box-sizing: border-box !important;
   margin: 0 !important;
   padding: 0 !important;
@@ -155,6 +155,8 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   height: var(--zehn-size-persona-notification) !important;
 
   svg {
+    padding: 0 !important;
+    margin: 0 !important;
     width: 100% !important;
     height: 100% !important;
     color: var(--zehn-color-icon1) !important;
@@ -209,6 +211,8 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   height: var(--zehn-size-icon-md) !important;
 
   svg {
+    padding: 0 !important;
+    margin: 0 !important;
     width: 100% !important;
     height: 100% !important;
     color: var(--zehn-color-icon1) !important;
